Fixed typo in post.

--- a/_posts/2019-03-29-concept.md
+++ b/_posts/2019-03-29-concept.md
@@ -9,4 +9,4 @@ This is a very early proof of concept build to test the animal-switching mechani
 
 Move with the arrow keys, jump with 'Z' and switch animals with 'X'. Free sprites available in the Unity Asset Store were used: a bunny for Clemm (double jump) and a squirrel for Ulthar (wall jump).
 
-You may only double jump one as Clemm, however wall jumping as Ulthar will refresh your double jump.
+You may only double jump once as Clemm, however wall jumping as Ulthar will refresh your double jump.
