--- a/_posts/2019-03-29-concept.md
+++ b/_posts/2019-03-29-concept.md
@@ -5,7 +5,7 @@ date: 2019/03/29
 unity_dir: proof_of_concept
 categories: [build, update]
 ---
-This is a very early proof of concept build to test the animal-switching mechanics. Most likely no code or assets will be used in the final deliverable.
+This is a very early proof of concept build to test the animal-switching mechanics. Most likely no code or assets from this build will be used in the final deliverable.
 
 Move with the arrow keys, jump with 'Z' and switch animals with 'X'. Free sprites available in the Unity Asset Store were used: a bunny for Clemm (double jump) and a squirrel for Ulthar (wall jump).
 
