Added Update #3 and some aesthetic changes.

--- a/_posts/2019-03-29-concept.md
+++ b/_posts/2019-03-29-concept.md
@@ -1,9 +1,10 @@
 ---
-theme: jekyll-theme-midnight
 title:  "Proof of Concept"
 date: 2019/03/29
 unity_dir: proof_of_concept
+layout: unity_build
 categories: [build, update]
+permalink: /builds/proof-of-concept.html
 ---
 This is a very early proof of concept build to test the animal-switching mechanics. Most likely no code or assets will be used in the final deliverable.
 
