Added final prorotype build.

--- a/_posts/2019-05-14-update8.md
+++ b/_posts/2019-05-14-update8.md
@@ -4,7 +4,7 @@ date: 2019/05/14
 unity_dir: prototype-v1
 layout: unity_build
 categories: [build, update]
-permalink: /builds/prototype.html
+permalink: /builds/update8.html
 ---
 Move with the arrow keys, jump with 'Z' and switch animals with 'X'.
 
